Update Changelog

Add Changelog for mr/55 (commits related to
159be3502310a69724594a899e52574e31e4aab6)

BUG: 472520